2025-05-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-directory-file-name):
	* tramp-integration.el (tramp-rfn-eshadow-update-overlay):
	Handle quoted local file name part.

2025-04-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (with-tramp-saved-connection-property): Fix typo.

2025-04-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-readlink-file-truename): New defconst.
	(tramp-bundle-read-file-names): Use new %m and %q format specifiers.
	(tramp-sh-handle-file-truename): Use `tramp-readlink-file-truename'.
	(tramp-bundle-read-file-names, tramp-get-remote-readlink): Simplify.
	(tramp-expand-script): Add format specifiers %m and %q for test
	commands.  Adapt readlink call.
	Reported by Stacey Marshall <stacey.marshall@gmail.com>.

2025-04-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (tramp-dump-connection-properties): Adapt comment.

	* tramp-compat.el (tramp-warning): Declare and use it.

	* tramp-message.el (tramp-warning): Declare `indent'.

2025-04-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-use-file-attributes): Fix docstring.
	(tramp-handle-file-readable-p, tramp-handle-file-writable-p):
	Force `file-attributes' check.  Use `file-truename' for symbolic links.
	(tramp-check-cached-permissions): New optional argument FORCE.
	Fix symlink check.  Check also for sticky bit.  (Bug#77402)

	* tramp-adb.el (tramp-adb-handle-file-executable-p): Check also
	for sticky bit.
	(tramp-adb-handle-file-readable-p): Simplify.

	* tramp-gvfs.el (tramp-gvfs-handle-file-executable-p): Check also
	for sticky bit.  Force `file-attributes' check.

	* tramp-sh.el (tramp-sh-handle-file-executable-p): Check also for
	sticky bit.
	(tramp-sh-handle-file-readable-p)
	(tramp-sh-handle-file-writable-p): Simplify.

	* tramp-sudoedit.el (tramp-sudoedit-handle-file-executable-p):
	Check also for sticky bit.
	(tramp-sudoedit-handle-file-readable-p)