@@ -1,3 +1,9 @@
+2025-05-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-make-process): Disable buffering
+	also for remote Solaris hosts.
+	Reported by Stacey Marshall <stacey.marshall@gmail.com>.
+
 2025-05-03  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-directory-file-name):
